# agentforge-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: benchmarks.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DecisionGraph.jsx  LLMCallLog.jsx  NodeDetail.jsx  WorkingDir.jsx
frontend/src/hooks/: useAgentSocket.js
src/agents/: __init__.py  analyzer.py  developer.py  doc_generator.py  executor.py  explainer.py  git_manager.py  loop.py  planner.py  security.py  tester.py
src/api/: events.py  main.py  ws_runner.py
src/cli/: __init__.py
src/hardware/: __init__.py  detector.py
src/llm/: __init__.py  client.py  keys.py  model_config.py  prompts.py
src/memory/: manager.py
src/orchestrator/: __init__.py  graph.py  runner.py
src/tools/: execution.py  file_ops.py  git_ops.py  registry.py
tests/: test_cli.py  test_developer.py  test_executor.py  test_git_manager.py  test_graph.py  test_planner.py  test_security.py  test_security_rules.py  test_tester.py
