[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "Laptop-first autonomous software development agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-anthropic>=0.3.0",
    "litellm>=1.50.0",
    "anthropic>=0.40.0",
    "psutil>=6.0.0",
    "py-cpuinfo>=9.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "tiktoken>=0.8.0",
    "gitpython>=3.1.40",
]

[project.scripts]
agentforge = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
